--- a/delivery_orders.html
+++ b/delivery_orders.html
@@ -28,7 +28,7 @@
             <option>Chick-Fil-A</option>
             <option>Five Guys</option>
             <option>McDonalds</option>
-            <option>Chilis</option>
+            <option>Smoothie King</option>
             <option>Subway</option>
             <option>Wendys</option>
             <option>BurgerKing</option>
